first devops project

--- a/first_devops_project/Dockerfile
+++ b/first_devops_project/Dockerfile
@@ -1,5 +1,5 @@
 FROM nginx:alpine
-MAINTAINER Senyoudev <younesmeskafe2018@gmail.com>
+LABEL MAINTAINER Senyoudev <younesmeskafe2018@gmail.com>
 COPY website /website
 COPY nginx.conf /etc/nginx/nginx.conf
 
